# fluent-ai

./: .dockerignore  .env.dev.example  .env.example  .env.prod.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.dev  README.md  alembic.ini  compose.yaml  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  fai  fai.bat  fai.ps1  fai.sh  main.py  pyproject.toml
db/init/: 01-init-db.sql  02-fluent-api-schema.sql  03-fluent-api-schema.sql  05-apply-grants.sql  06-api-key.sql  07-seed-admin-api-key.sh
docs/: architecture.md
docs/superpowers/plans/: 2026-04-22-standardize-fastapi-structure.md
docs/superpowers/specs/: 2026-04-17-gitops-roadmap.md
src/app/: config.py  database.py  dependencies.py  main.py
src/app/api/: __init__.py
src/app/core/: __init__.py  config.py  exceptions.py
src/app/crud/: __init__.py  projects.py
src/app/db/: __init__.py  base.py  session.py
src/app/errors/: __init__.py  codes.py  exceptions.py  handlers.py  logging.py  schemas.py  utils.py
src/app/internal/: admin.py  models.py  project.py
src/app/middleware/: __init__.py  request_id.py
src/app/models/: __init__.py  api_key.py
src/app/routers/: api_keys.py  items.py  projects.py  users.py
src/app/schemas/: __init__.py  api_key.py  items.py  projects.py  users.py
src/app/security/: __init__.py  auth.py
src/app/services/: __init__.py  api_key.py
src/tests/: conftest.py  test_google_gemini.py
tests/: __init__.py  conftest.py  test_error_handlers.py  test_services_api_key.py
tests/api/: __init__.py
(+8 files in other folders)
